--- a/Signature_Assignment.ipynb
+++ b/Signature_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYJCjLmt5x43DHVr+T8zPW",
+      "authorship_tag": "ABX9TyOmk4VqMd2JE5SU++EqmKSu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,58 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/starshine5150/430-Signature-Assignment-/blob/main/Signature_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install dash\n",
+        "!pip install pyngrok"
+      ],
+      "metadata": {
+        "id": "_PtMLmeVv_2r",
+        "outputId": "b1dcb10f-c7ba-43a9-da29-b2421cde6ee4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: dash in /usr/local/lib/python3.11/dist-packages (3.0.4)\n",
+            "Requirement already satisfied: Flask<3.1,>=1.0.4 in /usr/local/lib/python3.11/dist-packages (from dash) (3.0.3)\n",
+            "Requirement already satisfied: Werkzeug<3.1 in /usr/local/lib/python3.11/dist-packages (from dash) (3.0.6)\n",
+            "Requirement already satisfied: plotly>=5.0.0 in /usr/local/lib/python3.11/dist-packages (from dash) (5.24.1)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.11/dist-packages (from dash) (8.7.0)\n",
+            "Requirement already satisfied: typing-extensions>=4.1.1 in /usr/local/lib/python3.11/dist-packages (from dash) (4.13.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from dash) (2.32.3)\n",
+            "Requirement already satisfied: retrying in /usr/local/lib/python3.11/dist-packages (from dash) (1.3.4)\n",
+            "Requirement already satisfied: nest-asyncio in /usr/local/lib/python3.11/dist-packages (from dash) (1.6.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.11/dist-packages (from dash) (75.2.0)\n",
+            "Requirement already satisfied: Jinja2>=3.1.2 in /usr/local/lib/python3.11/dist-packages (from Flask<3.1,>=1.0.4->dash) (3.1.6)\n",
+            "Requirement already satisfied: itsdangerous>=2.1.2 in /usr/local/lib/python3.11/dist-packages (from Flask<3.1,>=1.0.4->dash) (2.2.0)\n",
+            "Requirement already satisfied: click>=8.1.3 in /usr/local/lib/python3.11/dist-packages (from Flask<3.1,>=1.0.4->dash) (8.2.0)\n",
+            "Requirement already satisfied: blinker>=1.6.2 in /usr/local/lib/python3.11/dist-packages (from Flask<3.1,>=1.0.4->dash) (1.9.0)\n",
+            "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from plotly>=5.0.0->dash) (9.1.2)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from plotly>=5.0.0->dash) (24.2)\n",
+            "Requirement already satisfied: MarkupSafe>=2.1.1 in /usr/local/lib/python3.11/dist-packages (from Werkzeug<3.1->dash) (3.0.2)\n",
+            "Requirement already satisfied: zipp>=3.20 in /usr/local/lib/python3.11/dist-packages (from importlib-metadata->dash) (3.21.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->dash) (3.4.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->dash) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->dash) (2.4.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->dash) (2025.4.26)\n",
+            "Requirement already satisfied: six>=1.7.0 in /usr/local/lib/python3.11/dist-packages (from retrying->dash) (1.17.0)\n",
+            "Collecting pyngrok\n",
+            "  Downloading pyngrok-7.2.8-py3-none-any.whl.metadata (10 kB)\n",
+            "Requirement already satisfied: PyYAML>=5.1 in /usr/local/lib/python3.11/dist-packages (from pyngrok) (6.0.2)\n",
+            "Downloading pyngrok-7.2.8-py3-none-any.whl (25 kB)\n",
+            "Installing collected packages: pyngrok\n",
+            "Successfully installed pyngrok-7.2.8\n"
+          ]
+        }
       ]
     },
     {
@@ -64,8 +116,8 @@
         "    df = df.dropna()\n",
         "    return df\n",
         "\n",
-        "# Initialize app\n",
-        "app = JupyterDash(__name__)\n",
+        "# Dash app\n",
+        "app = dash.Dash(__name__)\n",
         "\n",
         "# Layout\n",
         "app.layout = html.Div([\n",
@@ -125,24 +177,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 758
+          "height": 671
         },
         "id": "V2k5yvIenDS8",
-        "outputId": "91bcd6ff-733c-4ce3-f372-e28a53fa4b0b"
+        "outputId": "0df45f74-dc2b-45cc-a33c-b0507a623bcf"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/dash/dash.py:587: UserWarning:\n",
-            "\n",
-            "JupyterDash is deprecated, use Dash instead.\n",
-            "See https://dash.plotly.com/dash-in-jupyter for more details.\n",
-            "\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
